--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "http://blog.arvindgupta.tech/"
+baseURL: "https://64730413dd840d00089ea2db--courageous-swan-dfeaba.netlify.app/"
 title: Arvind's Blog
 paginate: 5
 theme: PaperMod
